cloud/deploy/manifests/ingress-nginx-with-cert.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/common-name: cloud.sealos.io
    cert-manager.io/duration: "2160h"
    cert-manager.io/renew-before: "360h"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: nginx-default
  namespace: sealos
spec:
  rules:
  - host: cloud.sealos.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: desktop-frontend
            port:
              number: 3000
      - pathType: Prefix
        path: /api(/|$)(.*)
        backend:
          service:
            name: service-auth
            port:
              number: 8080
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - cloud.sealos.io
    secretName: cloud-sealos-io-cert # < cert-manager will store the created certificate in this secret.

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/common-name: login.cloud.sealos.io
    cert-manager.io/duration: "2160h"
    cert-manager.io/renew-before: "360h"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: nginx-casdoor
  namespace: sealos
spec:
  rules:
    - host: login.cloud.sealos.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: casdoor
                port:
                  number: 8000
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
    - hosts:
        - login.cloud.sealos.io
      secretName: login-cloud-sealos-io-cert # < cert-manager will store the created certificate in this secret.
